--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.1",
   "dependencies": {
     "d3": "^3.5.6",
-    "lodash": "^4.1.0"
+    "lodash": "^4.1.0",
+    "rdflib": "^0.14.0"
   },
   "devDependencies": {
     "connect-livereload": "^0.6.0",
